--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   },
   "devDependencies": {
     "eslint": "4.3.0",
-    "eslint-config-airbnb": "16.0.0",
-    "eslint-config-airbnb-base": "12.0.2",
-    "eslint-plugin-import": "2.7.0"
+    "eslint-config-umeboshi-node": "^0.1.0"
   }
 }
