--- a/template/package.json
+++ b/template/package.json
@@ -26,7 +26,7 @@
     "build": "npm run clean && npm run lint && npm run modernizr && npm run webpack",
     "build:production": "cross-env NODE_ENV=production npm run build",
     "eslint": "eslint -c ./app/assets/js/.eslintrc.json \"./app/assets/js/**/*.{vue,js}\"",
-    "stylelint": "stylelint './app/assets/**/*.{vue,scss,css}'"
+    "stylelint": "stylelint './app/assets/**/*.{vue,scss,css}'",
     "lint": "npm run eslint && npm run stylelint"
   },
   "dependencies": {
